--- a/demo003/package.json
+++ b/demo003/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "glob": "^7.1.3",
     "koa": "^2.5.3",
+    "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
     "koa-router": "^7.4.0",
