--- a/demo003/package.json
+++ b/demo003/package.json
@@ -15,7 +15,9 @@
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "path": "^0.12.7"
   }
 }
